--- a/StoredData/yamlDump.yml
+++ b/StoredData/yamlDump.yml
@@ -4,7 +4,7 @@ hello:
 - world
 - guy
 - matrix
-recurrence in yaml: <HabitsAndChecklists.recurrence.WeeklyRecurrence object at 0x0000015F5EE13880>
+recurrence in yaml: <HabitsAndChecklists.recurrence.WeeklyRecurrence object at 0x000001D08A1E3970>
 list:
 - 6
 - 4
