--- a/DataManagement/DataYAML/sessionInfo.yml
+++ b/DataManagement/DataYAML/sessionInfo.yml
@@ -1,3 +1,5 @@
-previous session: Aug 25, 2022
+previous session: Aug 27, 2022
 global quota streak: 0
-completed dates: {}
+completed dates:
+  Aug 2022:
+  - 26
